# SF-API-Messager

./: Cargo.toml  LICENSE  README.md  contacted.txt  env.example
sf-api/src/: cechmessage.rs
sf-api/src/simulate/: mod.rs
src/: bot.rs  main.rs  sendtest.rs
src/static/: index.html
