[package]
name = "SFBot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sendtest"
path = "src/sendtest.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
chrono = "0.4.42"
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sf-api = { path = "sf-api" }
strum = "0.27.2"
tokio = { version = "1.49.0", features = ["full"] }